# brainfuck-rs

./: .gitignore  Cargo.toml  SECURITY.md  mise.toml
.github/: CONTRIBUTING.md
.github/workflows/: rust_test.yml
benches/: interpreter.rs
programs/: test.b
src/: lib.rs  main.rs  test.rs
