[package]
name = "brainfuck-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }

[dev-dependencies]
criterion = "0.8.2"
tempfile = "3.27.0"

[[bench]]
name = "interpreter"
harness = false
